# zacc

./: CMakeLists.txt  LICENSE  README.md  analysis.md  overview.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  ast.cpp  ast.h  builtins.cpp  builtins.h  codegen.cpp  codegen.h  copier.cpp  copier.h  decl.cpp  decl.h  depgen.cpp  depgen.h  diag.cpp  diag.h  expr.cpp  expr.h  ident.cpp  ident.h  interp.cpp  interp.h  lexer.cpp  lexer.h  lifetime.cpp  lifetime.h  lower.cpp  lower.h  main.cpp  mangle.cpp  mangle.h  mir.cpp  mir.cpp.bak  mir.h  numeric.cpp  numeric.h  parser.cpp  parser.h  query.cpp  query.h  sema.cpp  (+13 more)
templates/: h
tests/: CMakeLists.txt  algorithm.zaa  array.zaa  circular_buffer.zaa  dyn.zaa  flat_hash_map.zaa  flat_map.zaa  list.zaa  main.cpp  map.zaa  math.zaa  optional.zaa  partition.zaa  range.zaa  strconv.zaa  tuple.zaa  vector.zaa  visit.zaa
